[project]
name = "rag-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.10.0",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "sentence-transformers>=3.4.1",
    "chromadb>=0.4.15",
    "ollama>=0.4.7",
]
